--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
+    "@opentelemetry/exporter-jaeger": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
