--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-DB_HOST=
+DB_HOST=localhost
 DB_PORT=
 DB_USER=
 DB_PASS=
 DB_NAME=
+
+USER_URL=localhost:50052
+DETU_URL=localhost:50054
+PAY_URL=
+
+PORT=
