--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-DB_HOST=localhost
+DB_HOST=
 DB_PORT=
 DB_USER=
 DB_PASS=
 DB_NAME=
 
-USER_URL=localhost:50052
-DETU_URL=localhost:50054
+USER_URL=
+DETU_URL=
 PAY_URL=
 
 PORT=
